# playwright_p

./: .gitignore  README.md  main.py  pyproject.toml
static/: script.js  styles.css
templates/: dynamic.html  forms.html  index.html  modal.html
tests/: test_basic_navigation.py
tests/pages/: home_page.py
